--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,6 +5,8 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
+    env:
+      SHA8: ${GITHUB_SHA::8}
 
     steps:
       - uses: actions/checkout@v2
@@ -12,7 +14,12 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - name: Build with Gradle
-        run: ./gradlew build
       - name: Build container image with Gradle
-        run: ./gradlew :bootBuildImage
+        run: ./gradlew :bootBuildImage --imageName=tkak/java-http-echo:${SHA8}
+      - name: Publish to Registry
+        uses: elgohr/Publish-Docker-Github-Action@master
+        with:
+          name: tkak/java-http-echo
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
+          tags: "latest,${{ env.SHA8 }}"
