--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -6,7 +6,7 @@ jobs:
   build:
     runs-on: ubuntu-latest
     env:
-      SHA8: "${{ env.GITHUB_SHA::8 }}"
+      SHA8: "${GITHUB_SHA::8}"
 
     steps:
       - uses: actions/checkout@v2
