--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -5,8 +5,6 @@ on: [push]
 jobs:
   build:
     runs-on: ubuntu-latest
-    env:
-      SHA8: "${GITHUB_SHA::8}"
 
     steps:
       - uses: actions/checkout@v2
@@ -14,6 +12,8 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
+      - name: define hash
+        run: echo ::set-env name=SHA8::$(GITHUB_SHA::8)
       - name: Build container image with Gradle
         run: |
           echo "${SHA8}"
