--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,16 +12,13 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - name: define hash
-        run: echo ::set-env name=SHA8::$(GITHUB_SHA::8)
       - name: Build container image with Gradle
         run: |
-          echo "${SHA8}"
-          ./gradlew :bootBuildImage --imageName="tkak/java-http-echo:${SHA8}"
+          ./gradlew :bootBuildImage --imageName="tkak/java-http-echo:${{ github.sha }}"
       - name: Publish to Registry
         uses: elgohr/Publish-Docker-Github-Action@master
         with:
           name: tkak/java-http-echo
           username: ${{ secrets.DOCKER_USERNAME }}
           password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: "latest,${{ env.SHA8 }}"
+          tags: "latest,${{ github.sha }}"
