--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -16,9 +16,6 @@ jobs:
         run: |
           ./gradlew :bootBuildImage --imageName="tkak/java-http-echo:${{ github.sha }}"
       - name: Publish to Registry
-        uses: elgohr/Publish-Docker-Github-Action@master
-        with:
-          name: tkak/java-http-echo
-          username: ${{ secrets.DOCKER_USERNAME }}
-          password: ${{ secrets.DOCKER_PASSWORD }}
-          tags: "latest,${{ github.sha }}"
+        run: |
+          docker login -u ${{secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker push "tkak/java-http-echo:${{ github.sha }}"
