--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -1,4 +1,4 @@
-name: Java CI
+name: CI
 
 on: [push]
 
@@ -12,5 +12,10 @@ jobs:
         uses: actions/setup-java@v1
         with:
           java-version: 1.11
-      - name: Build with Gradle
-        run: ./gradlew build
+      - name: Build container image with Gradle
+        run: |
+          ./gradlew :bootBuildImage --imageName="${{ github.actor }}/java-http-echo:${{ github.sha }}"
+      - name: Publish to Registry
+        run: |
+          docker login -u ${{secrets.DOCKER_USERNAME }} -p ${{ secrets.DOCKER_PASSWORD }}
+          docker push "tkak/java-http-echo:${{ github.sha }}"
