--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,5 @@
-logging.file.name=/var/log/spring.log
-management.endpoint.health.probes.enabled=true
 management.health.livenessState.enabled=true
 management.health.readinessState.enabled=true
+management.endpoint.health.probes.enabled=true
 management.endpoint.prometheus.enabled=true
-management.endpoints.web.exposure.include=prometheus
-logging.path = /Users/takaaki.furukawa/src/github.com/tkak/java-http-echo
-logging.file = my.log
+management.endpoints.web.exposure.include=health,info,prometheus
