--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,3 +3,4 @@ management.health.readinessState.enabled=true
 management.endpoint.health.probes.enabled=true
 management.endpoint.prometheus.enabled=true
 management.endpoints.web.exposure.include=health,info,prometheus
+logging.file.path=/var/log
